<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="192dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"

                android:src="@drawable/banner1"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/fragment_gioi_thieu_Loi_dau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Loi_dau_gioi_thieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/fragment_gioi_thieu_Tam_nhin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_margin="10dp"
                android:src="@drawable/phucvu"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
            <TextView
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Tam_nhin_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Tam_nhin_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="10dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/fragment_gioi_thieu_Su_menh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_margin="10dp"
                android:src="@drawable/suckhoe"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
            <TextView
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Su_menh_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Su_menh_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/fragment_gioi_thieu_Su_menh_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="10dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/fragment_gioi_thieu_Gia_tri_cot_loi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_margin="10dp"
                android:src="@drawable/giatri"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
            <TextView
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Gia_tri_cot_loi_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Gia_tri_cot_loi_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="15dp"
                android:text="@string/fragment_gioi_thieu_Gia_tri_cot_loi_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_gioi_thieu_Gia_tri_cot_loi_4"
                android:textSize="15dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>