<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a5"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/custom_buttor"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:padding="30dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/login_Foodybite"

                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />


        </LinearLayout>

        <LinearLayout
            android:padding="30dp"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="69dp"
                    android:layout_marginTop="5dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_user" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edTenTKDangNhap"
                    android:layout_marginLeft="5dp"

                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColorHint="#EAE6E6"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"

                        android:hint="@string/login_activity_taikhoan" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="69dp"
                    android:layout_marginTop="5dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_password" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:errorEnabled="true"
                    android:layout_weight="1"
                    android:id="@+id/edPassDangNhap"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="#EAE6E6"
                    app:passwordToggleEnabled="true"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:inputType="textPassword"
                        android:hint="@string/login_activity_password" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="10dp"
                android:onClick="ChangePassword"
                android:text="@string/login_activity_qmk"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:onClick="Login"
            android:text="@string/login_activity_login" />

        <TextView
            android:id="@+id/textView6"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_signup"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:onClick="SignUp"
            android:textStyle="bold"

            android:gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>